<resources>
    <string name="app_name">NUMAD22Fa_team8</string>
    <string name="title_activity_a7">A7</string>
    <string name="title_activity_sticker_app">Sticker App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mfapp_create_post_form_title">Create a Post</string>
    <string name="mfapp_create_post_title">Post Title</string>
    <string name="mfapp_create_post_description">Description</string>
    <string name="mfapp_create_post_location">Location (City, Zipcode)</string>
    <string name="mfapp_create_post_status">Status</string>
    <string name="mfapp_create_post_author_name">Author Name</string>
    <string name="mfapp_create_post_author_email">Author Email</string>


</resources>